--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="hello">Hello World, Main!</string>
     <string name="app_name">Space Game</string>
     <string name="image_position_tag">0</string>
+    <string name="menu_exit">Exit</string>
 </resources>
